# svg2font-cli

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .npmignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  iconfont.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.js
.github/workflows/: ci.yml  publish.yml
npm/: .gitignore
npm/svg2font-cli-darwin-arm64/: package.json
npm/svg2font-cli-darwin-x64/: package.json
npm/svg2font-cli-linux-arm64/: package.json
npm/svg2font-cli-linux-x64/: package.json
npm/svg2font-cli-win32-x64/: package.json
src/: cli.ts  defaults.ts  index.ts  lib.rs  main.rs  napi.rs  types.ts  wasm.rs
src/cli/: run.rs  run.ts
src/core/: generate.rs  generate.ts  glyphs.rs  glyphs.ts  icons.rs  icons.ts  mod.rs  names.ts  sprite.rs  sprite.ts  svg-font-generator.ts  svg-font.ts  svg-sprite-store.ts  svg_font.rs  svgstore.ts  ttf.rs  zip.rs  zip.ts
src/internal/: font-converter.ts  svg-path.ts  woff2.ts
src/templates/: css.rs  css.ts  demo-css.ts  demo.rs  demo.ts  iconfont.rs  iconfont.ts  index.ts  manifest.ts  mod.rs  shared.ts
src/utils/: add-svg.ts  mod.rs  svg-helpers.ts
src/utils/font/: binary-writer.ts  index.ts  svg-to-ttf-path.ts  ttf-builder.ts  ttf-converter.ts
test/integration/: generate.test.ts
test/unit/: glyphs.test.ts  icons.test.ts  names.test.ts  sprite.test.ts  svg-font-generator.test.ts  svg-helpers.test.ts
