[workspace]
members = ["."]

[package]
name = "svg2font"
version = "1.0.0"
edition = "2021"
authors = ["svg2font contributors"]
description = "SVG to icon font converter with comprehensive format support"
license = "MIT"
repository = "https://github.com/jaysonwu991/svg2font"
keywords = ["svg", "font", "icon", "ttf", "woff"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "svg2font"
path = "src/main.rs"

[lib]
name = "svg2font"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive"] }

# SVG processing
usvg = "0.47"
svgtypes = "0.16"

# Path and file handling (not used in WASM builds)
glob = { version = "0.3", optional = true }

# Compression and archiving
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1.0"
brotli = "8.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# String manipulation
heck = "0.5"
regex = "1.11"

# Async runtime for async file operations (not used in WASM builds)
tokio = { version = "1.42", features = ["fs", "macros", "rt-multi-thread"], optional = true }

# Fast hashing
ahash = "0.8"

# Date/time
chrono = "0.4"
write-fonts = "0.49"
kurbo = "0.13"
font-types = "0.12.0"

napi = { version = "3", features = ["napi4", "async"], optional = true }
napi-derive = { version = "3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["native"]
native = ["dep:tokio", "dep:glob"]
napi = ["native", "dep:napi", "dep:napi-derive", "dep:napi-build"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:getrandom"]

[build-dependencies]
napi-build = { version = "2.3", optional = true }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
